--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
     <nav class="menu">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Abilities</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Process</a></li>
-        <li><a href="#">Tools</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="#abilities">Abilities</a></li>
+        <!-- <li><a href="#">Projects</a></li> -->
+        <!-- <li><a href="#">Process</a></li> -->
+        <li><a href="#tools">Tools</a></li>
+        <!-- <li><a href="#">Team</a></li> -->
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <div class="container page-wrapper">
+    <div class="container-fluid content-wrapper">
       <content>
         <div class="headline row">
           <div class="col-4 text-center">
@@ -35,64 +36,87 @@
           </div>
         </div><!-- /.headline -->
         <div class="deco row">
-          <div class="col-12">
-            <img src="assets/images/sun.svg" class="mars" />
-            <img src="assets/images/comet.svg" class="mars" />
+          <div class="col-6">
+            <img src="assets/images/sun.svg" class="sun" />
+          </div>
+          <div class="col-6">
+            <img src="assets/images/comet.svg" class="comet" />
           </div>
         </div><!-- /.abilities -->
         <div class="abilities row">
           <div class="col-12">
-            
+            <a name="abilities"></a>
+            <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
+            <img src="assets/images/how-we-work-illustration.svg" class="how-we-work-illustration" />
           </div>
         </div><!-- /.abilities -->
         <div class="projects row">
           <div class="col">
-            1 of 2
-          </div>
-          <div class="col">
-            1 of 2
           </div>
         </div><!-- /.projects -->
         <div class="process row">
           <div class="col">
-            1 of 2
-          </div>
-          <div class="col">
-            1 of 2
           </div>
         </div><!-- /.process -->
         <div class="tools row">
-          <div class="col">
-            1 of 2
-          </div>
-          <div class="col">
-            1 of 2
+          <div class="col-12">
+            <div class="row">
+              <a name="tools"></a>
+              <h2><span class="lead">Tools</span><br><span class="remaining">We Use</span></h2>
+            </div>
+            <div>
+              <img src="assets/images/tools-we-use-illustration.svg" class="tools-we-use-illustration" />
+            </div>
           </div>
         </div><!-- /.tools -->
         <div class="team row">
           <div class="col">
-            1 of 2
-          </div>
-          <div class="col">
-            1 of 2
           </div>
         </div><!-- /.team -->
         <div class="contact row">
           <div class="col">
-            1 of 2
-          </div>
-          <div class="col">
-            1 of 2
+            <div class="row">
+              <a name="contact"></a>
+              <h2><span class="lead">Send Us</span><br><span class="remaining">A Message</span></h2>
+            </div>
+            <div id="wufoo-z4szgs8153pzpk">
+            Fill out my <a href="https://wrburgess.wufoo.com/forms/z4szgs8153pzpk">online form</a>.
+            </div>
+            <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/gallery/templates/">Wufoo templates</a> to make your own HTML forms.</div>
           </div>
         </div><!-- /.contact -->
       </content>
-      <footer>
-        footer
-      </footer>
-    </div><!-- /.page-wrapper -->
+    </div><!-- /.container .content-wrapper -->
+    <footer>
+      <div class="contact-info">
+        All Aboard Apps, LLC<br>
+        Randy Burgess, Owner and Developer<br>
+        Phone: <a href="tel:773-551-6808">773-551-6808</a><br>
+        Email: <a href="mailto:randy@allaboardapps.com">randy@allaboardapps.com</a><br>
+      </div>
+      <div class="copyright">
+        © All Aboard Apps, LLC. All rights reserved.
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script type="text/javascript">var z4szgs8153pzpk;(function(d, t) {
+      var s = d.createElement(t), options = {
+      'userName':'wrburgess',
+      'formHash':'z4szgs8153pzpk',
+      'autoResize':true,
+      'height':'597',
+      'async':true,
+      'host':'wufoo.com',
+      'header':'show',
+      'ssl':true};
+      s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+      s.onload = s.onreadystatechange = function() {
+      var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+      try { z4szgs8153pzpk = new WufooForm();z4szgs8153pzpk.initialize(options);z4szgs8153pzpk.display(); } catch (e) {}};
+      var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+      })(document, 'script');</script>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
