--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
               <form name="aaa-contact-form" action="thank-you" netlify>
                 <div class="form-group">
                   <label for="name">Your name</label>
-                  <input type="text" class="form-control form-control-sm" id="name">
+                  <input type="text" class="form-control form-control-sm" id="name" name="name" >
                 </div>
                 <div class="form-group">
                   <label for="email-address">Email address</label>
-                  <input type="email" class="form-control form-control-sm" id="email-address">
+                  <input type="email" class="form-control form-control-sm" id="email-address" name="email-address">
                 </div>
                 <div class="form-group">
-                  <label for="message body">How can we help you?</label>
-                  <textarea class="form-control form-control-sm" id="exampleTextarea" rows="3"></textarea>
+                  <label for="message-body">How can we help you?</label>
+                  <textarea class="form-control form-control-sm" id="message-body" name="message-body" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn">SEND</button>
               </form>
@@ -100,17 +100,23 @@
         </div><!-- /.contact -->
       </content>
     </div><!-- /.container .content-wrapper -->
-    <footer>
-      <div class="contact-info">
-        All Aboard Apps, LLC<br>
-        Randy Burgess, Owner and Developer<br>
-        Phone: <a href="tel:773-551-6808">773-551-6808</a><br>
-        Email: <a href="mailto:randy@allaboardapps.com">randy@allaboardapps.com</a><br>
+    <div class="footer row">
+      <div class="col">
+        <div class="row">
+          <a name="contact"></a>
+          <h2><span class="lead">Contact Us</span><br><span class="remaining">Old Style</span></h2>
+        </div>
+        <div class="contact-info row">
+          All Aboard Apps, LLC<br>
+          Randy Burgess, Owner and Developer<br>
+          Phone: <a href="tel:773-551-6808">773-551-6808</a><br>
+          Email: <a href="mailto:randy@allaboardapps.com">randy@allaboardapps.com</a><br>
+        </div>
+        <div class="copyright row">
+          © All Aboard Apps, LLC. All rights reserved.
+        </div>
       </div>
-      <div class="copyright">
-        © All Aboard Apps, LLC. All rights reserved.
-      </div>
-    </footer>
+    </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
