--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="menu">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="#abilities">Abilities</a></li>
+        <li><a href="#abilities">What We Do</a></li>
         <!-- <li><a href="#">Projects</a></li> -->
         <!-- <li><a href="#">Process</a></li> -->
         <li><a href="#tools">Tools</a></li>
@@ -33,11 +33,13 @@
           </div>
           <div class="col-4 text-center">
             <img src="assets/images/mars.svg" class="mars" />
+            <img src="assets/images/quasar.svg" class="quasar" />
           </div>
         </div><!-- /.headline -->
         <div class="deco row">
           <div class="col-6">
             <img src="assets/images/sun.svg" class="sun" />
+            <img src="assets/images/quasar.svg" class="quasar" />
           </div>
           <div class="col-6">
             <img src="assets/images/comet.svg" class="comet" />
@@ -47,15 +49,18 @@
           <div class="col-12">
             <a name="abilities"></a>
             <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
-            <img src="assets/images/how-we-work-illustration.svg" class="how-we-work-illustration" />
+            <img src="assets/images/quasar.svg" class="quasar1" />
+            <img src="assets/images/what-we-do-illustration.svg" class="what-we-do-illustration" />
+            <img src="assets/images/quasar.svg" class="quasar2" />
+            <img src="assets/images/quasar.svg" class="quasar3" />
           </div>
         </div><!-- /.abilities -->
         <div class="projects row">
-          <div class="col">
+          <div class="col-12">
           </div>
         </div><!-- /.projects -->
         <div class="process row">
-          <div class="col">
+          <div class="col-12">
           </div>
         </div><!-- /.process -->
         <div class="tools row">
@@ -74,7 +79,7 @@
           </div>
         </div><!-- /.team -->
         <div class="contact row">
-          <div class="col">
+          <div class="col-12">
             <div class="row">
               <a name="contact"></a>
               <h2><span class="lead">Send Us</span><br><span class="remaining">A Message</span></h2>
@@ -83,15 +88,15 @@
               <form name="aaa-contact-form" action="thank-you" netlify>
                 <div class="form-group">
                   <label for="name">Your name</label>
-                  <input type="text" class="form-control form-control-sm" id="name" name="name" >
+                  <input type="text" class="form-control form-control-sm" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                   <label for="email-address">Email address</label>
-                  <input type="email" class="form-control form-control-sm" id="email-address" name="email-address">
+                  <input type="email" class="form-control form-control-sm" id="email-address" name="email-address" required>
                 </div>
                 <div class="form-group">
                   <label for="message-body">How can we help you?</label>
-                  <textarea class="form-control form-control-sm" id="message-body" name="message-body" rows="3"></textarea>
+                  <textarea class="form-control form-control-sm" id="message-body" name="message-body" rows="3" required></textarea>
                 </div>
                 <button type="submit" class="btn">SEND</button>
               </form>
@@ -101,19 +106,22 @@
       </content>
     </div><!-- /.container .content-wrapper -->
     <div class="footer row">
-      <div class="col">
+      <div class="col-12">
         <div class="row">
-          <a name="contact"></a>
-          <h2><span class="lead">Contact Us</span><br><span class="remaining">Old Style</span></h2>
+          <h2><span class="lead">Contact Us</span><br><span class="remaining">Directly</span></h2>
         </div>
         <div class="contact-info row">
-          All Aboard Apps, LLC<br>
-          Randy Burgess, Owner and Developer<br>
-          Phone: <a href="tel:773-551-6808">773-551-6808</a><br>
-          Email: <a href="mailto:randy@allaboardapps.com">randy@allaboardapps.com</a><br>
+          <div class="col-12">
+            All Aboard Apps, LLC<br>
+            Randy Burgess, Owner and Developer<br>
+            Phone: <a href="tel:773-551-6808">773-551-6808</a><br>
+            Email: <a href="mailto:randy@allaboardapps.com">randy@allaboardapps.com</a><br>
+          </div>
         </div>
         <div class="copyright row">
-          © All Aboard Apps, LLC. All rights reserved.
+          <div class="col-12">
+            © All Aboard Apps, LLC. All rights reserved.
+          </div>
         </div>
       </div>
     </div>
