newer version of what we do illustration

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
@@ -50,6 +49,7 @@
             <a name="abilities"></a>
             <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
             <img src="assets/images/quasar.svg" class="quasar1" />
+            <img src="assets/images/comet.svg" class="comet" />
             <img src="assets/images/what-we-do-illustration.svg" class="what-we-do-illustration" />
             <img src="assets/images/quasar.svg" class="quasar2" />
             <img src="assets/images/quasar.svg" class="quasar3" />
