replacing contact form bg

--- a/index.html
+++ b/index.html
@@ -113,9 +113,14 @@
         <div class="contact-info row">
           <div class="col-12">
             All Aboard Apps, LLC<br>
-            Randy Burgess, Owner and Developer<br>
-            Phone: <a href="tel:773-551-6808">773-551-6808</a><br>
-            Email: <a href="mailto:randy@allaboardapps.com">randy@allaboardapps.com</a><br>
+            Chicago, IL, USA<br>
+            <a href="tel:773-551-6808">773-551-6808</a><br>
+            <a href="mailto:info@allaboardapps.com">randy@allaboardapps.com</a><br>
+          </div>
+        </div>
+        <div class="tagline row">
+          <div class="col-12">
+            <p>Based in Chicago. Work for Anywhere.</p>
           </div>
         </div>
         <div class="copyright row">
