--- a/index.html
+++ b/index.html
@@ -4,132 +4,140 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/headline.css">
+    <link rel="stylesheet" href="assets/css/deco.css">
+    <link rel="stylesheet" href="assets/css/abilities.css">
+    <link rel="stylesheet" href="assets/css/tools.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
   </head>
   <body>
-    <nav class="menu">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#abilities">What We Do</a></li>
-        <!-- <li><a href="#">Projects</a></li> -->
-        <!-- <li><a href="#">Process</a></li> -->
-        <li><a href="#tools">Tools</a></li>
-        <!-- <li><a href="#">Team</a></li> -->
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
     <div class="container-fluid content-wrapper">
-      <content>
-        <div class="headline row">
-          <div class="col-4 text-center">
-            <img src="assets/images/earth.svg" class="earth" />
-          </div>
-          <div class="col-4 text-center">
-            <div class="logo-and-name">
-              <img src="assets/images/all-aboard-apps-logo.svg" class="logo" />
-              <h1>All Aboard Apps</h1>
-            </div>
-          </div>
-          <div class="col-4 text-center">
-            <img src="assets/images/mars.svg" class="mars" />
-            <img src="assets/images/quasar.svg" class="quasar" />
-          </div>
-        </div><!-- /.headline -->
-        <div class="deco row">
-          <div class="col-6">
-            <img src="assets/images/sun.svg" class="sun" />
-            <img src="assets/images/quasar.svg" class="quasar" />
-          </div>
-          <div class="col-6">
-            <img src="assets/images/comet.svg" class="comet" />
-          </div>
-        </div><!-- /.abilities -->
-        <div class="abilities row">
-          <div class="col-12">
-            <a name="abilities"></a>
-            <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
-            <img src="assets/images/quasar.svg" class="quasar1" />
-            <img src="assets/images/comet.svg" class="comet" />
-            <img src="assets/images/what-we-do-illustration.svg" class="what-we-do-illustration" />
-            <img src="assets/images/quasar.svg" class="quasar2" />
-            <img src="assets/images/quasar.svg" class="quasar3" />
-          </div>
-        </div><!-- /.abilities -->
-        <div class="projects row">
-          <div class="col-12">
-          </div>
-        </div><!-- /.projects -->
-        <div class="process row">
-          <div class="col-12">
-          </div>
-        </div><!-- /.process -->
-        <div class="tools row">
-          <div class="col-12">
-            <div class="row">
-              <a name="tools"></a>
-              <h2><span class="lead">Tools</span><br><span class="remaining">We Use</span></h2>
-            </div>
-            <div>
-              <img src="assets/images/tools-we-use-illustration.svg" class="tools-we-use-illustration" />
-            </div>
-          </div>
-        </div><!-- /.tools -->
-        <div class="team row">
-          <div class="col">
-          </div>
-        </div><!-- /.team -->
-        <div class="contact row">
-          <div class="col-12">
-            <div class="row">
-              <a name="contact"></a>
-              <h2><span class="lead">Send Us</span><br><span class="remaining">A Message</span></h2>
-            </div>
-            <div class="contact-form-wrapper">
-              <form name="aaa-contact-form" action="thank-you" netlify>
-                <div class="form-group">
-                  <label for="name">Your name</label>
-                  <input type="text" class="form-control form-control-sm" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                  <label for="email-address">Email address</label>
-                  <input type="email" class="form-control form-control-sm" id="email-address" name="email-address" required>
-                </div>
-                <div class="form-group">
-                  <label for="message-body">How can we help you?</label>
-                  <textarea class="form-control form-control-sm" id="message-body" name="message-body" rows="3" required></textarea>
-                </div>
-                <button type="submit" class="btn">SEND</button>
-              </form>
-            </div>
-          </div>
-        </div><!-- /.contact -->
-      </content>
-    </div><!-- /.container .content-wrapper -->
-    <div class="footer row">
-      <div class="col-12">
-        <div class="row">
-          <h2><span class="lead">Contact Us</span><br><span class="remaining">Directly</span></h2>
-        </div>
-        <div class="contact-info row">
-          <div class="col-12">
-            All Aboard Apps, LLC<br>
-            Chicago, IL, USA<br>
-            <a href="tel:773-551-6808">773-551-6808</a><br>
-            <a href="mailto:info@allaboardapps.com">randy@allaboardapps.com</a><br>
-          </div>
-        </div>
-        <div class="tagline row">
-          <div class="col-12">
-            <p>Based in Chicago. Work for Anywhere.</p>
-          </div>
-        </div>
-        <div class="copyright row">
-          <div class="col-12">
-            © All Aboard Apps, LLC. All rights reserved.
-          </div>
-        </div>
+      <div class="menu row">
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#abilities">What We Do</a></li>
+            <!-- <li><a href="#">Projects</a></li> -->
+            <!-- <li><a href="#">Process</a></li> -->
+            <li><a href="#tools">Tools</a></li>
+            <!-- <li><a href="#">Team</a></li> -->
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
+      <div class="headline row">
+        <div class="col-4 text-center">
+          <img src="assets/images/earth.svg" class="earth" />
+        </div>
+        <div class="col-4 text-center">
+          <div class="logo-and-name">
+            <img src="assets/images/all-aboard-apps-logo.svg" class="logo" />
+            <h1>All Aboard Apps</h1>
+          </div>
+        </div>
+        <div class="col-4 text-center">
+          <img src="assets/images/mars.svg" class="mars" />
+          <img src="assets/images/quasar.svg" class="quasar" />
+        </div>
+      </div><!-- /.headline -->
+      <div class="deco row">
+        <div class="col-6">
+          <img src="assets/images/sun.svg" class="sun" />
+          <img src="assets/images/quasar.svg" class="quasar" />
+        </div>
+        <div class="col-6">
+          <img src="assets/images/comet.svg" class="comet" />
+        </div>
+      </div><!-- /.deco -->
+      <div class="abilities row">
+        <div class="col-12">
+          <a name="abilities"></a>
+          <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
+          <img src="assets/images/quasar.svg" class="quasar1" />
+          <img src="assets/images/comet.svg" class="comet" />
+          <img src="assets/images/what-we-do-illustration.svg" class="what-we-do-illustration" />
+          <img src="assets/images/quasar.svg" class="quasar2" />
+          <img src="assets/images/quasar.svg" class="quasar3" />
+        </div>
+      </div><!-- /.abilities -->
+      <div class="projects row">
+        <div class="col-12">
+        </div>
+      </div><!-- /.projects -->
+      <div class="process row">
+        <div class="col-12">
+        </div>
+      </div><!-- /.process -->
+      <div class="tools row">
+        <div class="col-12">
+          <div class="row">
+            <a name="tools"></a>
+            <h2><span class="lead">Tools</span><br><span class="remaining">We Use</span></h2>
+          </div>
+          <div>
+            <img src="assets/images/tools-we-use-illustration.svg" class="tools-we-use-illustration" />
+          </div>
+        </div>
+      </div><!-- /.tools -->
+      <div class="team row">
+        <div class="col">
+        </div>
+      </div><!-- /.team -->
+      <div class="contact row">
+        <div class="col-12">
+          <div class="row">
+            <a name="contact"></a>
+            <h2><span class="lead">Send Us</span><br><span class="remaining">A Message</span></h2>
+          </div>
+          <div class="contact-form-wrapper">
+            <form name="aaa-contact-form" action="thank-you" netlify>
+              <div class="form-group">
+                <label for="name">Your name</label>
+                <input type="text" class="form-control form-control-sm" id="name" name="name" required>
+              </div>
+              <div class="form-group">
+                <label for="email-address">Email address</label>
+                <input type="email" class="form-control form-control-sm" id="email-address" name="email-address" required>
+              </div>
+              <div class="form-group">
+                <label for="message-body">How can we help you?</label>
+                <textarea class="form-control form-control-sm" id="message-body" name="message-body" rows="3" required></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn">SEND</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div><!-- /.contact -->
+      <div class="footer row">
+        <div class="col-12">
+          <div class="row">
+            <h2><span class="lead">Contact Us</span><br><span class="remaining">Directly</span></h2>
+          </div>
+          <div class="contact-info row">
+            <div class="col-12">
+              All Aboard Apps, LLC<br>
+              <a href="tel:773-551-6808">773-551-6808</a><br>
+              <a href="mailto:info@allaboardapps.com">randy@allaboardapps.com</a><br>
+            </div>
+          </div><!-- /.contact-info -->
+          <div class="tagline row">
+            <div class="col-12">
+              <p>Based in Chicago. Work for Anywhere.</p>
+            </div>
+          </div><!-- /.tagline -->
+          <div class="copyright row">
+            <div class="col-12">
+              © All Aboard Apps, LLC. All rights reserved.
+            </div>
+          </div><!-- /.copyright -->
+        </div>
+      </div><!-- /.footer -->
+    </div><!-- /.container-fluid .content-wrapper -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
