updating for mobile

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
   <body>
     <div class="container-fluid content-wrapper">
       <div class="menu row">
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#abilities">What We Do</a></li>
-            <!-- <li><a href="#">Projects</a></li> -->
-            <!-- <li><a href="#">Process</a></li> -->
-            <li><a href="#tools">Tools</a></li>
-            <!-- <li><a href="#">Team</a></li> -->
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
+        <div class="menu col-12">
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="#abilities">What We Do</a></li>
+              <!-- <li><a href="#">Projects</a></li> -->
+              <!-- <li><a href="#">Process</a></li> -->
+              <li><a href="#tools">Tools</a></li>
+              <!-- <li><a href="#">Team</a></li> -->
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
       <div class="headline row">
         <div class="col-4 text-center">
