--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
             <h2><span class="lead">Send Us</span><br><span class="remaining">A Message</span></h2>
           </div>
           <div class="contact-form-wrapper">
-            <form name="aaa-contact-form" action="thank-you" netlify>
+            <form name="aaa-contact-form" action="thank-you" netlify-honeypot="trap" netlify>
+              <div style="display: none;">
+                <label>Trap: <input name="trap"></label>
+              </div>
               <div class="form-group">
                 <label for="name">Your name</label>
                 <input type="text" class="form-control form-control-sm" id="name" name="name" required>
