updating tools for responsive

--- a/index.html
+++ b/index.html
@@ -75,12 +75,35 @@
       </div><!-- /.process -->
       <div class="tools row">
         <div class="col-12">
-          <div class="row">
+          <div class="row tools-header">
             <a name="tools"></a>
+            <img src="assets/images/tools-we-use-illustration.svg" class="tools-we-use-illustration" />
             <h2><span class="lead">Tools</span><br><span class="remaining">We Use</span></h2>
           </div>
-          <div>
-            <img src="assets/images/tools-we-use-illustration.svg" class="tools-we-use-illustration" />
+          <div class="row">
+            <div class="col-4">
+              <img src="assets/images/tool-circle.svg" class="tool-circle" />
+              <p>JavaScript, Node, & React</p>
+            </div>
+            <div class="col-4">
+              <img src="assets/images/tool-circle.svg" class="tool-circle" />
+              <p>Ruby on Rails</p>
+            </div>
+            <div class="col-4">
+              <img src="assets/images/tool-circle.svg" class="tool-circle" />
+              <p>Custom CMS, & Wordpress</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <img src="assets/images/tool-circle.svg" class="tool-circle" />
+              <p>MySQL, Postgres, SQL Server, MongoDB
+              </p>
+            </div>
+            <div class="col-6">
+              <img src="assets/images/tool-circle.svg" class="tool-circle" />
+              <p>Heroku, Amazon (AWS), & Custom Hosting</p>
+            </div>
           </div>
         </div>
       </div><!-- /.tools -->
