updating what we do

--- a/index.html
+++ b/index.html
@@ -56,13 +56,47 @@
       </div><!-- /.deco -->
       <div class="abilities row">
         <div class="col-12">
-          <a name="abilities"></a>
-          <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
-          <img src="assets/images/quasar.svg" class="quasar1" />
-          <img src="assets/images/comet.svg" class="comet" />
-          <img src="assets/images/what-we-do-illustration.svg" class="what-we-do-illustration" />
-          <img src="assets/images/quasar.svg" class="quasar2" />
-          <img src="assets/images/quasar.svg" class="quasar3" />
+          <div class="row">
+            <a name="abilities"></a>
+            <h2><span class="lead">What</span><br><span class="remaining">We Do</span></h2>
+          </div>
+          <div class="row">
+            <img src="assets/images/quasar.svg" class="quasar1" />
+            <img src="assets/images/comet.svg" class="comet" />
+            <img src="assets/images/quasar.svg" class="quasar3" />
+          </div>
+          <div class="col-12 planet">
+            <div class="row skills">
+              <div class="col-6 database">
+                <img src="assets/images/abilities-database.svg" />
+                <p>Database Design/Build</p>
+              </div>
+              <div class="col-6 search-engine">
+                <img src="assets/images/abilities-search-engine.svg" />
+                <p>Custom Search Engines</p>
+              </div>
+            </div>
+            <div class="row skills">
+              <div class="col-6 ecommerce">
+                <img src="assets/images/abilities-ecommerce.svg" />
+                <p>Ecommerce</p>
+              </div>
+              <div class="col-6 web-and-mobile">
+                <img src="assets/images/abilities-web-and-mobile.svg" />
+                <p>Web and Mobile Apps</p>
+              </div>
+            </div>
+            <div class="row skills">
+              <div class="col-6 cms">
+                <img src="assets/images/abilities-cms.svg" />
+                <p>Websites and CMS</p>
+              </div>
+              <div class="col-6 data-viz">
+                <img src="assets/images/abilities-data-viz.svg" />
+                <p>Reporting and<br>Data Visualization</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div><!-- /.abilities -->
       <div class="projects row">
